--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/styles.css';
+import Chatbot from '../components/Chatbot.astro';
 ---
 
 <!DOCTYPE html>
@@ -530,6 +531,7 @@ import '../styles/styles.css';
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" defer></script>
 
+    <Chatbot />
 
   </body>
 </html>
